--- a/horizontal/horiz.css
+++ b/horizontal/horiz.css
@@ -14,6 +14,7 @@ body {
 	color: #fff;
 }
 
+/*whole screen*/
 .frame {
 	width: 100vw;
 	height: 100vh;
@@ -30,7 +31,6 @@ body {
 }
 
 /*images*/
-
 .pic {
 	position: fixed;
 	/*-moz-transform: translate(-50%, -50%);*/
@@ -42,9 +42,16 @@ body {
 	overflow: hidden;
 }
 
+/*make pics visible*/
+.active {
+	z-index: 98;
+	opacity: .75;
+}
+.active:hover {
+	opacity: 1;
+}
 
-/*next and previous*/
-
+/*next and previous buttons*/
 .button {
 	z-index: 99;
 	text-transform: uppercase;
@@ -58,13 +65,4 @@ body {
 .hidden {
 	z-index: 0;
 	visibility: hidden;
-}
-
-/*make pics visible*/
-.active {
-	z-index: 98;
-	opacity: .75;
-}
-.active:hover {
-	opacity: 1;
 }
